--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
-1- nodejs hello world.
-2- deployment of image
 3- update of modified image
+	Add deployment to kubernetes
+	Test with new images
 4- integrate update into a server running in the background
 5- seperate 2 branch master/qa
 
